# schizophrenia-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  language.json
.github/workflows/: build_and_publish.yml
migrations/2025-05-17-120028_create_messages/: down.sql  up.sql
migrations/2025-05-24-070446_create_images/: down.sql  up.sql
migrations/2025-05-24-173852_create_stickers/: down.sql  up.sql
src/: bot.rs  main.rs  schema.rs
src/commands/: mod.rs  start.rs  stats.rs
src/handlers/: dice.rs  greeting.rs  images.rs  messages.rs  mod.rs  stickers.rs
src/models/: image.rs  message.rs  mod.rs  sticker.rs
src/modules/: database.rs  i18n.rs  mod.rs
