[package]
name = "schizophrenia-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
diesel = { version = "2.2.10", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
log = "0.4.27"
markov = "1.1.0"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
